# rover-firmware

./: .gitignore
motor_controller/: CMakeLists.txt  sdkconfig
motor_controller/docs/: README.md.txt  architecture.md  bringup.md  firmware_overview.md  motor_control.md  progress.md  ros_topics.md  system_architecture.md
motor_controller/main/: CMakeLists.txt  encoder_input.c  encoder_input.h  esp32_serial_transport.h  micro_ros_node.c  micro_ros_node.h  motor_controller.c  motor_output.c  motor_output.h  rover_control.c  rover_control.h
